# nb-backend-development

./: .gitignore  README.md  app.yaml  pyproject.toml  requirements.txt
crud_fastapi/: .gitignore  main.py  pyproject.toml
crud_fastapi/crud_fastapi/: main.py
tests/: test_app.py
