[tool.poetry]
name = "crud-fastapi"
version = "0.1.0"
description = ""
authors = ["Lohhan <lohhang05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
requests = "^2.31.0"
google-cloud-firestore = "^2.16.0"
firebase-admin = "^6.5.0"

[tool.taskipy.tasks]
run = "uvicorn crud_fastapi.main:app --reload"

[tool.pytest.ini.options]
pythonpath = "."

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
